Wed Apr 26 10:41:08 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in: Reflect current list of headers to be installed.

Thu Apr 20 11:35:07 1995    <tytso@rsx-11.mit.edu>

	* k5-config.h, configure.in: Remove support for HAS_ANSI_CONST
		(that was needed only for compatibility with the old imake
		build; autoconf uses -Dconst=), and HAS_ANSI_VOLATILE,
		which isn't used at all.

Wed Apr 19 13:25:56 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* func-proto.h: Remove global_context hack. Added prototype for
		krb5_set_default_realm.

Thu Apr 13 15:49:16 1995 Keith Vetter (keithv@fusion.com)

        * asn1.h, ccache.h, encryption.h, func-pro.h, hostaddr.h, keytab.h,
          los-prot.h, preauth.h, rcache.h: 
            removed unneeded INTERFACE from non-api functions.
        * adm_defs.h, ccache.h, encryption.h, hostaddr.h, k5-free.h, keytab.h,
          macros.h, rcache.h:
           Added FAR to pointers visible to the world.
        * base-def.h, ext-prot.h, rsa-md5.h: __STDC__ condition also 
           checks for the _WINDOWS define.

Wed Apr 5 16:41:41 1995 Keith Vetter (keithv@fusion.com)

	* los-proto.h, func-proto.h: moved krb5_us_timeofday and 
           krb5_sname_to_principal from the former to the latter.
        * base-def.h: added FAR to pointer types for the PC.
        * func-proto.h: added FAR to pointer types in prototypes but
           only for functions which are exported.

Fri Mar 31 19:34:47 1995 Keith Vetter (keithv@fusion.com)

	* k5-config.h: defined dup to _dup for STDC stuff on Windows

Fri Mar 31 16:12:28 1995  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in (CONFIG_RULES): Replaced.

Thu Mar 30 15:57:22 1995 Keith Vetter (keithv@fusion.com)

	* func-proto.h: added 2 missing prototypes dealing with auth_con.

Tue Mar 28 19:53:09 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: changed to reflect deletion of stock/osconf.win.
        * k5-config.h: added constants for reading default values