@@ -1,3 +1,7 @@
+Thu Apr 27 11:24:24 1995 Keith Vetter (keithv@fusion.com)
+
+	* k5-config.h: Changed over to the new single config file on the PC.
+
 Wed Apr 26 10:41:08 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
 
 	* Makefile.in: Reflect current list of headers to be installed.
